# diploma

3d_reconstruction/: CMakeLists.txt  coefficients.h  controllers.cpp  controllers.h  densify.cpp  densify.h  entities.cpp  entities.h  estimators.cpp  estimators.h  features.cpp  features.h  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  optimization.cpp  optimization.h  options.cpp  options.h  polygons.h  processor.cpp  processor.h  projection.cpp  projection.h  readme.txt  refinement.cpp  refinement.h  storage.cpp  storage.h  surface_reconstruct.cpp  surface_reconstruct.h  user_interface.cpp  user_interface.h  utils.cpp  utils.h
3d_reconstruction/cmake/: FindFreeImage.cmake  FindGlew.cmake
3d_reconstruction/pmvs/: CMakeLists.txt
3d_reconstruction/pmvs/cmvs/: bundle.h
3d_reconstruction/pmvs/image/: camera.cc  camera.h  image.cc  image.h  photo.cc  photo.h  photoSetS.cc  photoSetS.h
3d_reconstruction/pmvs/nlopt-2.4.2/: CMakeLists.txt
3d_reconstruction/pmvs/pmvs/: detectFeatures.cc  detectFeatures.h  findMatch.h  patchOrganizerS.cc  seed.cc  seed.h
3d_reconstruction/pmvs/stann/: sfcnn.hpp
3d_reconstruction/poisson_triangulation/: CMakeLists.txt  MultiGridOctreeData.inl
3d_reconstruction/sift_gpu/: CMakeLists.txt
3d_reconstruction/sift_gpu/release/: CMakeCache.txt
3d_reconstruction/sqlite/: CMakeLists.txt
