include_directories(
        ${CMAKE_SOURCE_DIR}/pmvs/image
        ${CMAKE_SOURCE_DIR}/pmvs/numeric
        ${CMAKE_SOURCE_DIR}/pmvs/pmvs
        ${CMAKE_SOURCE_DIR}/pmvs/cmvs
        ${CMAKE_SOURCE_DIR}/pmvs/tinycthread
        ${CMAKE_SOURCE_DIR}/pmvs/graclus1.2/metisLib
        ${CMAKE_SOURCE_DIR}/pmvs/cimg
        ${CMAKE_SOURCE_DIR}/pmvs/stann
        ${CMAKE_SOURCE_DIR}/pmvs/nlopt-2.4.2/api
)

add_subdirectory(cmvs)
add_subdirectory(image)
add_subdirectory(numeric)
add_subdirectory(pmvs)
add_subdirectory(tinycthread)
add_subdirectory(nlopt-2.4.2)
add_subdirectory(graclus1.2)
